# stm32f103c8tx_ProjectTemplate

./: .gitignore  CMakeLists.txt  CMakePresets.json  app.ioc
.github/workflows/: build.yml  release.yml
Core/Inc/: stm32f1xx_it.h
Core/Src/: main.c  stm32f1xx_it.c
Drivers/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal_pcd.c
Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/: usbd_cdc.c
Middlewares/ST/STM32_USB_Device_Library/Core/Src/: usbd_ctlreq.c
USB_DEVICE/App/: usbd_cdc_if.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
lib/: CMakeLists.txt
lib/MyLib/: CMakeLists.txt
lib/MyLib/include/: mylib.h
lib/MyLib/src/: mylib.c
lib/MyLib2/: CMakeLists.txt
lib/MyLib2/include/: mylib2.h
lib/MyLib2/src/: mylib2.c
tests/: CMakeLists.txt
tests/unitTests/: AppUnitTest.c  CMakeLists.txt
tests/unitTests/MyLib/: CMakeLists.txt  myLibTestSuite.c
tests/unitTests/MyLib2/: CMakeLists.txt  myLib2TestSuite.c
tools/scripts/: build.sh  clean.sh  debug.sh  genCoverage.sh  program.sh  runTests.sh
